[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangocms-checks"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Fabian Braun", email = "fsbraun@gmx.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/djangocms-checks#readme"
Issues = "https://github.com/unknown/djangocms-checks/issues"
Source = "https://github.com/unknown/djangocms-checks"

[tool.hatch.version]
path = "djangocms_checks/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "django>=4.2",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/djangocms_checks tests}"

[tool.coverage.run]
source_pkgs = ["djangocms_checks", "tests"]
branch = true
parallel = true
omit = [
  "djangocms_checks/__init__.py",
]

[tool.coverage.paths]
djangocms_checks = ["djangocms_checks",]
tests = ["tests", "*/djangocms-checks/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
