[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangocms-conditions"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Fabian Braun", email = "fsbraun@gmx.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/fsbraun/djangocms-conditions#readme"
Issues = "https://github.com/fsbraun/djangocms-conditions/issues"
Source = "https://github.com/fsbraun/djangocms-conditions"

[tool.hatch.version]
path = "djangocms_conditions/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "django>=4.2",
]
[tool.hatch.envs.default.scripts]
test = "python ./tests/manage.py test {args:tests}"
test-cov = "coverage run ./tests/manage.py test {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/djangocms_checks tests}"

[tool.coverage.run]
source_pkgs = ["djangocms_checks", "tests"]
branch = true
parallel = true
omit = [
  "djangocms_conditions/__init__.py",
]

[tool.coverage.paths]
djangocms_checks = ["djangocms_conditions",]
tests = ["tests", "*/djangocms_conditions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
